implemented jwt settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
    "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=inventory_db;Username=postgres;Password=root"
   },
+  "JwtSettings": {
+  "Secret": "YourSuperSecretKeyHereDontShare", 
+  "Issuer": "InventorySystem",
+  "Audience": "InventoryUsers",
+  "ExpiryMinutes": 60
+},
   "AllowedHosts": "*"
 }
