Add ECS GitHub Actions CI/CD pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS ECS via ECR
+name: Deploy to AWS ECS
 
 on:
   push:
@@ -9,64 +9,53 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: us-east-1
-      ECR_REGISTRY: 964832344816.dkr.ecr.us-east-1.amazonaws.com
-      ECR_REPOSITORY: hostname
-      IMAGE_TAG: latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "9.0.x"
+
+      - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Amazon ECR
+      - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker image
+      - name: Build and push Docker image to ECR
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-      - name: Push Docker image to ECR
-        run: |
+          IMAGE_TAG=latest
+          ECR_REGISTRY=964832344816.dkr.ecr.us-east-1.amazonaws.com
+          ECR_REPOSITORY=hostname
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Download ECS task definition
-        run: |
-          aws ecs describe-task-definition \
-            --task-definition inventory-management-system-task-definition \
-            --query taskDefinition > task-definition.json
-
-      - name: Update task definition with new image
-        run: |
-          IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          jq --arg IMAGE_URI "$IMAGE_URI" '.containerDefinitions[0].image = $IMAGE_URI' task-definition.json > new-task-definition.json
-
-      - name: Register new task definition revision
+      - name: Register new ECS task definition revision
         run: |
           aws ecs register-task-definition \
-            --cli-input-json file://new-task-definition.json
+            --family inventory-management-system-task-definition \
+            --network-mode awsvpc \
+            --requires-compatibilities FARGATE \
+            --cpu 512 \
+            --memory 1024 \
+            --execution-role-arn arn:aws:iam::964832344816:role/ecsTaskExecutionRole \
+            --container-definitions file://container-definitions.json
 
-      - name: Update ECS service to use new task definition
+      - name: Update ECS service to use latest task definition
         run: |
+          NEW_TASK_DEF_ARN=$(aws ecs describe-task-definition --task-definition inventory-management-system-task-definition --query "taskDefinition.taskDefinitionArn" --output text)
+
           aws ecs update-service \
             --cluster inventory-management-system-ecs \
             --service inventory-management-system-task-definition-service-n4o02e6v \
-            --force-new-deployment
+            --task-definition $NEW_TASK_DEF_ARN
 
-      - name: Confirm deployment
-        run: |
-          aws ecs wait services-stable \
-            --cluster inventory-management-system-ecs \
-            --services inventory-management-system-task-definition-service-n4o02e6v
-
-      - name: Deployment completed
-        run: echo "✅ Deployment to ECS completed successfully."
+      - name: Deployment complete
+        run: echo "🚀 Deployment to ECS completed successfully!"
